generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  userId              BigInt    @id @default(autoincrement()) @map("user_id")
  email               String    @unique
  password            String
  nickname            String
  resetToken          String?   @map("reset_token")
  resetTokenExpiresAt DateTime? @map("reset_token_expires_at")
  createdAt           DateTime  @default(now()) @map("created_at")
  updatedAt           DateTime  @updatedAt @map("updated_at")

  refreshTokens        RefreshToken[]
  icons                Icon[]
  categories           Category[]
  categoryUserSettings CategoryUserSetting[]
  accounts             Account[]
  cards                Card[]
  transactions         Transaction[]
  syncClients          SyncClient[]
  syncHistories        SyncHistory[]
  settings             UserSetting[]

  @@map("USER")
}

model UserSetting {
  settingId    BigInt   @id @default(autoincrement()) @map("setting_id")
  userId       BigInt   @map("user_id")
  settingKey   String   @map("setting_key") @db.VarChar(50)
  settingValue Json     @map("setting_value")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [userId])

  @@unique([userId, settingKey], map: "USER_SETTING_user_id_setting_key_key")
  @@index([userId])
  @@index([settingKey])
  @@map("USER_SETTING")
}

model IconDictionary {
  iconDictionaryId BigInt   @id @default(autoincrement()) @map("icon_dictionary_id")
  iconCode         String   @unique @map("icon_code")
  providerType     String   @map("provider_type")
  providerKey      String   @map("provider_key")
  searchKeywords   String[] @default([]) @map("search_keywords")
  createdAt        DateTime @default(now()) @map("created_at")
  updatedAt        DateTime @updatedAt @map("updated_at")

  icons Icon[]

  @@unique([providerType, providerKey], map: "ICON_DICTIONARY_provider_type_provider_key_key")
  @@index([providerType])
  @@map("ICON_DICTIONARY")
}

model RefreshToken {
  refreshTokenId BigInt    @id @default(autoincrement()) @map("refresh_token_id")
  userId         BigInt    @map("user_id")
  tokenHash      String    @map("token_hash")
  userAgent      String?   @map("user_agent")
  clientId       String?   @map("client_id")
  expiresAt      DateTime  @map("expires_at")
  revokedAt      DateTime? @map("revoked_at")
  createdAt      DateTime  @default(now()) @map("created_at")
  updatedAt      DateTime  @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [userId])

  @@map("REFRESH_TOKEN")
}

model Icon {
  iconId           BigInt   @id @default(autoincrement()) @map("icon_id")
  userId           BigInt?  @map("user_id")
  iconDictionaryId BigInt   @map("icon_dictionary_id")
  show             Boolean  @default(true)
  isDefault        Boolean  @default(false) @map("is_default")
  createdAt        DateTime @default(now()) @map("created_at")
  updatedAt        DateTime @updatedAt @map("updated_at")

  user           User?          @relation(fields: [userId], references: [userId])
  iconDictionary IconDictionary @relation(fields: [iconDictionaryId], references: [iconDictionaryId])
  categories     Category[]
  accounts       Account[]
  cards          Card[]

  @@unique([userId, iconDictionaryId], map: "ICON_user_id_icon_dictionary_id_key")
  @@index([iconDictionaryId])
  @@index([userId])
  @@index([show])
  @@index([isDefault])
  @@map("ICON")
}

model Category {
  categoryId   BigInt   @id @default(autoincrement()) @map("category_id")
  userId       BigInt?  @map("user_id")
  iconId       BigInt   @map("icon_id")
  categoryName String   @map("category_name")
  show         Boolean  @default(true)
  isDefault    Boolean  @default(false) @map("is_default")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")

  user                 User?                 @relation(fields: [userId], references: [userId], onDelete: SetNull)
  icon                 Icon                  @relation(fields: [iconId], references: [iconId])
  categoryUserSettings CategoryUserSetting[]
  transactions         Transaction[]

  @@unique([userId, categoryName], map: "CATEGORY_user_id_category_name_key")
  @@index([userId])
  @@index([iconId])
  @@index([categoryName])
  @@index([show])
  @@index([isDefault])
  @@map("CATEGORY")
}

model CategoryUserSetting {
  categoryUserSettingId BigInt   @id @default(autoincrement()) @map("category_user_setting_id")
  userId                BigInt   @map("user_id")
  categoryId            BigInt   @map("category_id")
  show                  Boolean  @default(true)
  createdAt             DateTime @default(now()) @map("created_at")
  updatedAt             DateTime @updatedAt @map("updated_at")

  user     User     @relation(fields: [userId], references: [userId])
  category Category @relation(fields: [categoryId], references: [categoryId])

  @@unique([userId, categoryId], map: "CATEGORY_USER_SETTING_user_id_category_id_key")
  @@index([userId])
  @@index([categoryId])
  @@index([show])
  @@map("CATEGORY_USER_SETTING")
}

model Account {
  accountId            BigInt   @id @default(autoincrement()) @map("account_id")
  userId               BigInt   @map("user_id")
  iconId               BigInt   @map("icon_id")
  accountName          String   @map("account_name") @db.VarChar(50)
  initialBalance       Decimal  @map("initial_balance") @db.Decimal(15, 0)
  currentBalance       Decimal  @map("current_balance") @db.Decimal(15, 0)
  allowNegativeBalance Boolean  @default(false) @map("allow_negative_balance")
  negativeBalanceLimit Decimal  @default(0) @map("negative_balance_limit") @db.Decimal(15, 0)
  deletedYn            Boolean  @default(false) @map("deleted_yn")
  createdAt            DateTime @default(now()) @map("created_at")
  updatedAt            DateTime @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [userId])
  icon Icon @relation(fields: [iconId], references: [iconId])

  @@index([userId])
  @@index([userId, accountName])
  @@index([deletedYn])
  @@map("ACCOUNT")
}

model Card {
  cardId    BigInt   @id @default(autoincrement()) @map("card_id")
  userId    BigInt   @map("user_id")
  iconId    BigInt   @map("icon_id")
  cardName  String   @map("card_name") @db.VarChar(50)
  useYn     Boolean  @default(true) @map("use_yn")
  deletedYn Boolean  @default(false) @map("deleted_yn")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [userId])
  icon Icon @relation(fields: [iconId], references: [iconId])

  @@index([userId])
  @@index([userId, cardName])
  @@index([useYn])
  @@index([deletedYn])
  @@map("CARD")
}

enum TransactionType {
  INCOME
  EXPENSE
}

enum WalletType {
  ACCOUNT
  CARD
}

enum SyncAction {
  CREATE
  UPDATE
  DELETE
}

enum SyncResult {
  SUCCESS
  FAILED
  CONFLICT
}

model SyncClient {
  syncClientId BigInt    @id @default(autoincrement()) @map("sync_client_id")
  userId       BigInt    @map("user_id")
  clientId     String    @map("client_id")
  deviceName   String?   @map("device_name")
  platform     String?
  lastSyncedAt DateTime? @map("last_synced_at")
  createdAt    DateTime  @default(now()) @map("created_at")
  updatedAt    DateTime  @updatedAt @map("updated_at")

  user          User          @relation(fields: [userId], references: [userId])
  transactions  Transaction[]
  syncHistories SyncHistory[]

  @@unique([userId, clientId], map: "SYNC_CLIENT_user_id_client_id_key")
  @@index([userId])
  @@index([clientId])
  @@index([lastSyncedAt])
  @@map("SYNC_CLIENT")
}

model Transaction {
  transactionId   BigInt          @id @default(autoincrement()) @map("transaction_id")
  userId          BigInt          @map("user_id")
  categoryId      BigInt          @map("category_id")
  walletId        BigInt          @map("wallet_id")
  syncClientId    BigInt?         @map("sync_client_id")
  clientTempId    String?         @map("client_temp_id")
  transactionType TransactionType @map("transaction_type")
  walletType      WalletType      @map("wallet_type")
  amount          Decimal         @db.Decimal(15, 0)
  transactionDate DateTime        @map("transaction_date") @db.Date
  memo            String?         @db.VarChar(200)
  deletedYn       Boolean         @default(false) @map("deleted_yn")
  syncedAt        DateTime?       @map("synced_at")
  createdAt       DateTime        @default(now()) @map("created_at")
  updatedAt       DateTime        @updatedAt @map("updated_at")

  user          User         @relation(fields: [userId], references: [userId])
  category      Category     @relation(fields: [categoryId], references: [categoryId])
  syncClient    SyncClient?  @relation(fields: [syncClientId], references: [syncClientId])
  syncHistories SyncHistory[]

  @@unique([userId, syncClientId, clientTempId], map: "TRANSACTION_user_id_sync_client_id_client_temp_id_key")
  @@index([userId])
  @@index([transactionDate])
  @@index([categoryId])
  @@index([walletId])
  @@index([walletType])
  @@index([transactionType])
  @@index([clientTempId])
  @@index([syncClientId])
  @@index([syncedAt])
  @@index([deletedYn])
  @@map("TRANSACTION")
}

model SyncHistory {
  syncHistoryId   BigInt     @id @default(autoincrement()) @map("sync_history_id")
  userId          BigInt     @map("user_id")
  syncClientId    BigInt     @map("sync_client_id")
  transactionId   BigInt?    @map("transaction_id")
  clientTempId    String?    @map("client_temp_id")
  syncAction      SyncAction @map("sync_action")
  syncResult      SyncResult @map("sync_result")
  errorMessage    String?    @map("error_message")
  serverAppliedAt DateTime?  @map("server_applied_at")
  createdAt       DateTime   @default(now()) @map("created_at")

  user        User         @relation(fields: [userId], references: [userId])
  syncClient  SyncClient   @relation(fields: [syncClientId], references: [syncClientId])
  transaction Transaction? @relation(fields: [transactionId], references: [transactionId])

  @@index([userId])
  @@index([syncClientId])
  @@index([transactionId])
  @@index([clientTempId])
  @@index([syncResult])
  @@index([serverAppliedAt])
  @@map("SYNC_HISTORY")
}
