```mermaid
erDiagram

    USER ||--o{ TRANSACTION : owns
    USER ||--o{ ACCOUNT : owns
    USER ||--o{ CARD : owns
    USER ||--o{ CATEGORY : owns
    USER ||--o{ CATEGORY_USER_SETTING : configures
    USER ||--o{ ICON : owns
    ICON_DICTIONARY ||--o{ ICON : maps
    USER ||--o{ USER_SETTING : owns
    USER ||--o{ SYNC_CLIENT : owns
    USER ||--o{ SYNC_HISTORY : owns

    CATEGORY ||--o{ TRANSACTION : classifies
    CATEGORY ||--o{ CATEGORY_USER_SETTING : configured_by

    ACCOUNT ||--o{ TRANSACTION : records
    CARD ||--o{ TRANSACTION : records
    SYNC_CLIENT ||--o{ TRANSACTION : syncs
    SYNC_CLIENT ||--o{ SYNC_HISTORY : records
    TRANSACTION ||--o{ SYNC_HISTORY : logged_by

    ICON ||--o{ ACCOUNT : uses
    ICON ||--o{ CARD : uses
    ICON ||--o{ CATEGORY : uses

    ICON_DICTIONARY {
        BIGINT icon_dictionary_id PK "아이콘 사전 ID"
        VARCHAR icon_code "서비스 내부 아이콘 코드"
        VARCHAR provider_type "외부 Provider 유형"
        VARCHAR provider_key "Provider 내부 식별자"
        VARCHAR[] search_keywords "검색어/별칭"
        DATETIME created_at
        DATETIME updated_at
    }

    USER {
        BIGINT user_id PK "사용자 고유 ID"
        VARCHAR email "로그인 이메일"
        VARCHAR password "암호화된 비밀번호"
        VARCHAR nickname "사용자 표시명"
    }

    TRANSACTION {
        BIGINT transaction_id PK "거래 내역 고유 ID"
        BIGINT user_id FK "사용자 ID"
        BIGINT category_id FK "카테고리 ID"
        BIGINT wallet_id FK "wallet_type에 따른 account_id 또는 card_id"
        BIGINT sync_client_id FK "동기화 클라이언트 ID"
        VARCHAR client_temp_id "클라이언트 임시 거래 ID"
        VARCHAR transaction_type "INCOME, EXPENSE"
        VARCHAR wallet_type "ACCOUNT, CARD"
        DECIMAL amount "거래 금액"
        DATE transaction_date "거래일자"
        VARCHAR memo "거래 메모"
        CHAR deleted_yn "삭제 여부"
        DATETIME synced_at "서버 반영 완료 일시"
        DATETIME created_at "생성일시"
        DATETIME updated_at "수정일시"
    }

    ACCOUNT {
        BIGINT account_id PK "계좌 ID"
        BIGINT user_id FK "사용자 ID"
        BIGINT icon_id FK "아이콘 ID"
        VARCHAR account_name "계좌명"
        DECIMAL initial_balance "초기 잔액"
        DECIMAL current_balance "현재 잔액"
        CHAR use_yn "사용 여부"
    }

    CARD {
        BIGINT card_id PK "카드 ID"
        BIGINT user_id FK "사용자 ID"
        BIGINT icon_id FK "아이콘 ID"
        VARCHAR card_name "카드명"
        CHAR use_yn "사용 여부"
    }

    CATEGORY {
        BIGINT category_id PK "카테고리 ID"
        BIGINT user_id FK "사용자 ID. 기본 카테고리는 NULL"
        BIGINT icon_id FK "아이콘 ID"
        VARCHAR category_name "카테고리명"
        BOOLEAN show "기본 표시 여부"
        BOOLEAN is_default "기본 카테고리 여부"
    }

    CATEGORY_USER_SETTING {
        BIGINT category_user_setting_id PK "카테고리 사용자별 설정 ID"
        BIGINT user_id FK "사용자 ID"
        BIGINT category_id FK "카테고리 ID"
        BOOLEAN show "사용자별 표시 여부"
        BOOLEAN include_in_statistics "사용자별 통계 포함 여부. false면 통계 집계 제외"
        DATETIME created_at "생성일시"
        DATETIME updated_at "수정일시"
    }

    ICON {
        BIGINT icon_id PK "아이콘 ID"
        BIGINT user_id FK "사용자 ID. 기본 아이콘은 NULL"
        BIGINT icon_dictionary_id FK "아이콘 사전 ID"
        BOOLEAN show "화면 표시 여부"
        BOOLEAN is_default "기본 아이콘 여부"
    }

    USER_SETTING {
        BIGINT setting_id PK "설정 ID"
        BIGINT user_id FK "사용자 ID"
        VARCHAR setting_key "설정 키"
        JSON setting_value "설정 값"
        DATETIME created_at "생성일시"
        DATETIME updated_at "수정일시"
    }

    SYNC_CLIENT {
        BIGINT sync_client_id PK "동기화 클라이언트 ID"
        BIGINT user_id FK "사용자 ID"
        VARCHAR client_id "클라이언트 식별자"
        VARCHAR device_name "기기명"
        VARCHAR platform "플랫폼"
        DATETIME last_synced_at "마지막 동기화 일시"
        DATETIME created_at "생성일시"
        DATETIME updated_at "수정일시"
    }

    SYNC_HISTORY {
        BIGINT sync_history_id PK "동기화 이력 ID"
        BIGINT user_id FK "사용자 ID"
        BIGINT sync_client_id FK "동기화 클라이언트 ID"
        BIGINT transaction_id FK "거래 ID"
        VARCHAR client_temp_id "클라이언트 임시 거래 ID"
        VARCHAR sync_action "CREATE, UPDATE, DELETE"
        VARCHAR sync_result "SUCCESS, FAILED, CONFLICT"
        TEXT error_message "실패 사유"
        DATETIME server_applied_at "서버 반영 일시"
        DATETIME created_at "생성일시"
    }
```
